20190716 modified and new file commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
         <span class="posts-date"> {{ post.date | date_to_string }} </span>
         {{ post.excerpt }}
         <a href="{{ site.baseurl }}{{ post.url }}">
-            Read the Article ->
+            Read the Article →
         </a>
     </div>
     {% endfor %}
